# DistributedIntegration

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
src/: CMakeLists.txt
src/client/: CMakeLists.txt  about.h  client.cpp  client.h  integrator.cpp  integrator.h  main.cpp  network_manager.cpp  network_manager.h  task_executor.cpp  task_executor.h  worker_pool.cpp  worker_pool.h
src/client/integration_methods/: integration_strategy.h  simpsons_rule.h  trapezoidal_rule.h
src/common/: CMakeLists.txt  logger.cpp  logger.h  messages.h  net_utils.cpp  net_utils.h  systeminfo.h  utils.cpp  utils.h
src/server/: CMakeLists.txt  about.h  client_connection.cpp  client_connection.h  client_manager.cpp  client_manager.h  input_handler.cpp  input_handler.h  main.cpp  result_aggregator.cpp  result_aggregator.h  server.cpp  server.h  task_distributor.cpp  task_distributor.h
tests/: CMakeLists.txt
tests/integration_tests/: CMakeLists.txt  test_integration_common.cpp  test_simpsons_rule.cpp  test_trapezoidal_rule.cpp
